# twinPics-core

./: Cargo.toml
src/: color.rs  default_vocab.txt  error.rs  indexer.rs  lib.rs  manifest.rs  pdf.rs  project.rs  search.rs  tags.rs
src/db/: mod.rs
src/ml/: backend.rs  clip.rs  embd_index.rs  mock.rs  mod.rs  model_paths.rs
tests/: cli_help.rs  index_tests.rs  list_clean_tests.rs  perf_tests.rs  real_clip_tests.rs  search_tests.rs  tags_tests.rs
tests/common/: mod.rs
