[package]
name = "twinpics_core"
version = "0.0.1"
edition = "2021"
description = "twinpics core — indexing and search library"
license = "MIT OR Apache-2.0"

[lib]
name = "twinpics_core"
path = "src/lib.rs"

[features]
# Mock embedding backend (tests + dev); integration tests need this because `cfg(test)` is not
# set when building the `twinpics_core` rlib for `crates/**/tests/*.rs` targets.
default = ["mock"]
mock = []
# Opt-in CLIP integration tests in tests/real_clip_tests.rs (enables Hub download if weights missing).
model-download = ["dep:hf-hub"]
real-clip = ["model-download"]

[dependencies]
# Optional: fetch CLIP weights from Hugging Face when not found on disk (`model-download` feature).
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
# default `esaxx_fast` pulls esaxx-rs/cpp with static_crt on MSVC, which LNK2038-conflicts with cxx (usearch).
tokenizers = { version = "0.20", default-features = false, features = ["onig", "progressbar"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff"] }
usearch = "2.25"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serial_test = "3"
tempfile = "3"
